crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__failure_test_dispatch.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `INDENT (interface signatures)`, encontrado
  │ `<STMT_SEP>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/failure_test_dispatch.kata:1:1]
 1 │ # Múltiplo Despacho Customizado que funciona no Parser atual
   · ▲
 2 │ interface NUM
   ╰────
