crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__failure_test_fibonacci.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error:   × erro de resolução (Pass 1): diretiva `test` não reconhecida em sig `fib`
