crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__failure_test_log.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error:   × erro de resolução (Pass 1): diretiva `log` não reconhecida em action
  │ `test_log: when é obrigatório em @log`; diretiva `log` não reconhecida em
  │ action `test_log: when deve ser "enter" ou "exit", got ""`
