crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__failure_test_main.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
assertion_line: 100
expression: output
---
--- stderr ---
Error:   × erro de resolução (Pass 1): [UnknownDirective { name: "test", context:
  │ "sig", item_name: "foo" }]
