crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__failure_test_orphan.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `INDENT (action body)`, encontrado `<STMT_SEP>`
