crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_capture_mutable.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``(``, encontrado `f`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_capture_mutable.kata:5:11]
 4 │     let f := lambda y: + y x
 5 │     echo! f 3
   ·           ┬
   ·           ╰── token inesperado
   ╰────
