crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_closure_escape.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``(``, encontrado `a`
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_closure_escape.kata:12:11]
 11 │     let b := add10 7
 12 │     echo! a
    ·           ─
 13 │     echo! b
    ╰────
