crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_closure_stack.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.unbound_name

  × nome `$` não está no escopo
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_closure_stack.kata:5:11]
 4 │     let f := lambda x: + x n
 5 │     echo!($(f 5))
   ·           ┬
   ·           ╰── nome não vinculado
   ╰────
  help: você quis dizer `*`, `+`, `-`?
